--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ activity-compose = "1.7.0"
 compose-bom = "2023.03.00"
 
 [libraries]
+compose-viewmodel = "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
